--- a/src/app/subject/subject-create/subject-create.component.html
+++ b/src/app/subject/subject-create/subject-create.component.html
@@ -10,16 +10,16 @@
 
     <!-- Course Input -->
     <div class="form-group mb-3" >
-      <label class="control-label" for="course">Subject Course*</label>
-      <input id="course" name="course" type="number" class="form-control" required [(ngModel)]="subject.course" #course="ngModel">
-      <div class="invalid-feedback">A subject course is required</div>
+      <label class="control-label" for="course">Course*</label>
+      <input id="course" name="course" type="text" class="form-control" required [(ngModel)]="subject.course" #course="ngModel">
+      <div class="invalid-feedback">A course is required</div>
     </div>
 
     <!-- Optional Input -->
     <div class="form-group mb-3" >
-      <label class="control-label" for="optional">Subject Optional*</label>
+      <label class="control-label" for="optional">Optional*</label>
       <input id="optional" name="optional" type="text" class="form-control" required [(ngModel)]="subject.optional" #optional="ngModel">
-      <div class="invalid-feedback">A subject optional is required</div>
+      <div class="invalid-feedback">An optional is required</div>
     </div>
 
     <!-- Button -->
