--- a/src/app/subject/subject-edit/subject-edit.component.html
+++ b/src/app/subject/subject-edit/subject-edit.component.html
@@ -10,16 +10,16 @@
 
     <!--Course input -->
     <div class="form-group mb-3">
-      <label class="control-label" for="course">Subject Course*</label>
-      <input id="course" name="course" type="number" class="form-control" required [(ngModel)]="subject.course">
-      <div class="invalid-feedback">A subject course is required</div>
+      <label class="control-label" for="course">Course*</label>
+      <input id="course" name="course" type="text" class="form-control" required [(ngModel)]="subject.course">
+      <div class="invalid-feedback">A course is required</div>
     </div>
 
     <!--Optional input -->
     <div class="form-group mb-3">
-      <label class="control-label" for="name">Subject Optional*</label>
+      <label class="control-label" for="name">Optional*</label>
       <input id="optional" name="optional" type="text" class="form-control" required [(ngModel)]="subject.optional">
-      <div class="invalid-feedback">A subject optional is required</div>
+      <div class="invalid-feedback">An optional is required</div>
     </div>
 
     <!-- Button -->
